--- a/docs/errors/err_ngrok_8012.mdx
+++ b/docs/errors/err_ngrok_8012.mdx
@@ -9,7 +9,7 @@ import ErrorDetails from "/src/components/ErrorDetails";
 
 ### Message
 
-Traffic was successfully tunneled to the ngrok agent, but the agent failed to establish a connection to the upstream web service at `ADDR`.
+search
 
 ### Further help
 
